index.html added responsive

--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -15,44 +15,47 @@
       <a href="../../index.html" title="Home page">
          <img src="../../assets/logo.svg" alt="bambook"></img>
       </a>
-      <ul class="social-networks">
-         <li>
-            <a href="#">
-               <img src="../../assets/redes_sociais/youtube.svg" alt="Youtube">
-            </a>
-         </li>
-         <li>
-            <a href="#">
-               <img src="../../assets/redes_sociais/instagram.svg" alt="Instagram">
-            </a>
-         </li>
-         <li>
-            <a href="#">
-               <img src="../../assets/redes_sociais/whatsapp.svg" alt="WhatsApp">
-            </a>
-         </li>
-         <li>
-            <a href="#">
-               <img src="../../assets/redes_sociais/facebook.svg" alt="Facebook">
-            </a>
-         </li>
-      </ul>
       <nav>
-         <ul class="menu">
-            <li>
-               <a href="contact.html">Contact</a>
-            </li>
-            <li>
-               <a href="../quem_somos/quem-somos.html">About Us</a>
-            </li>
-            <li>
-               <a href="../signIn/sign-in.html">Sign in</a>
-            </li>
-            <li>
-               <a href="../registration/registration.html">Create Account</a>
-            </li>
-         </ul>
+         <section class="wrapper">
+            <ul class="social-networks">
+               <li>
+                  <a href="#">
+                     <img src="../../assets/redes_sociais/youtube.svg" alt="Youtube">
+                  </a>
+               </li>
+               <li>
+                  <a href="#">
+                     <img src="../../assets/redes_sociais/instagram.svg" alt="Instagram">
+                  </a>
+               </li>
+               <li>
+                  <a href="#">
+                     <img src="../../assets/redes_sociais/whatsapp.svg" alt="WhatsApp">
+                  </a>
+               </li>
+               <li>
+                  <a href="#">
+                     <img src="../../assets/redes_sociais/facebook.svg" alt="Facebook">
+                  </a>
+               </li>
+            </ul>
+            <ul class="menu">
+               <li>
+                  <a href="../contact/contact.html">Contact</a>
+               </li>
+               <li>
+                  <a href="../quem_somos/quem-somos.html">About Us</a>
+               </li>
+               <li>
+                  <a href="../signIn/sign-in.html">Sign in</a>
+               </li>
+               <li>
+                  <a href="../registration/registration.html">Create Account</a>
+               </li>
+            </ul>
+         </section>
       </nav>
+      <div id="hamburguer"></div>
    </header>
    <main>
       <form action="">
@@ -73,5 +76,7 @@
          <img src="assets/image/contact_us.svg" alt="">
       </div>
    </main>
+
+   <script src="../../js/navbar.js"></script>
 </body>
 </html>
