--- a/pages/signIn/sign-in.html
+++ b/pages/signIn/sign-in.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,50 +10,52 @@
 
    <title>Sign In</title>
 </head>
-
 <body>
    <header>
       <a href="../../index.html" title="Home page">
-         <img src="../../assets/logo.svg" alt="Bambook"></img>
+         <img src="../../assets/logo.svg" alt="bambook"></img>
       </a>
-      <ul class="social-networks">
-         <li>
-            <a href="#">
-               <img src="../../assets/redes_sociais/youtube.svg" alt="Youtube">
-            </a>
-         </li>
-         <li>
-            <a href="#">
-               <img src="../../assets/redes_sociais/instagram.svg" alt="Instagram">
-            </a>
-         </li>
-         <li>
-            <a href="#">
-               <img src="../../assets/redes_sociais/whatsapp.svg" alt="WhatsApp">
-            </a>
-         </li>
-         <li>
-            <a href="#">
-               <img src="../../assets/redes_sociais/facebook.svg" alt="Facebook">
-            </a>
-         </li>
-      </ul>
       <nav>
-         <ul class="menu">
-            <li>
-               <a href="../contact/contact.html">Contact</a>
-            </li>
-            <li>
-               <a href="../quem_somos/quem-somos.html">About Us</a>
-            </li>
-            <li>
-               <a href="sign-in.html">Sign in</a>
-            </li>
-            <li>
-               <a href="../registration/registration.html">Create Account</a>
-            </li>
-         </ul>
+         <section class="wrapper">
+            <ul class="social-networks">
+               <li>
+                  <a href="#">
+                     <img src="../../assets/redes_sociais/youtube.svg" alt="Youtube">
+                  </a>
+               </li>
+               <li>
+                  <a href="#">
+                     <img src="../../assets/redes_sociais/instagram.svg" alt="Instagram">
+                  </a>
+               </li>
+               <li>
+                  <a href="#">
+                     <img src="../../assets/redes_sociais/whatsapp.svg" alt="WhatsApp">
+                  </a>
+               </li>
+               <li>
+                  <a href="#">
+                     <img src="../../assets/redes_sociais/facebook.svg" alt="Facebook">
+                  </a>
+               </li>
+            </ul>
+            <ul class="menu">
+               <li>
+                  <a href="../contact/contact.html">Contact</a>
+               </li>
+               <li>
+                  <a href="../quem_somos/quem-somos.html">About Us</a>
+               </li>
+               <li>
+                  <a href="../signIn/sign-in.html">Sign in</a>
+               </li>
+               <li>
+                  <a href="../registration/registration.html">Create Account</a>
+               </li>
+            </ul>
+         </section>
       </nav>
+      <div id="hamburguer"></div>
    </header>
    <main>
       <section>
@@ -103,5 +104,7 @@
          </section>
       </section>
    </main>
+
+   <script src="../../js/navbar.js"></script>
 </body>
 </html>
