--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,53 +8,57 @@
 
    <link rel="stylesheet" href="css/main.css">
    <link rel="stylesheet" href="css/navbar.css">
-   <link rel="stylesheet" href="css/responsive.css">
+   <link rel="stylesheet" href="css/main-responsive.css">
 
    <title>Projeto de interface WEB</title>
 </head>
+
 <body>
    <header>
       <a href="index.html" title="Home page">
          <img src="assets/logo.svg" alt="bambook"></img>
       </a>
-      <ul class="social-networks">
-         <li>
-            <a href="#">
-               <img src="assets/redes_sociais/youtube.svg" alt="Youtube">
-            </a>
-         </li>
-         <li>
-            <a href="#">
-               <img src="assets/redes_sociais/instagram.svg" alt="Instagram">
-            </a>
-         </li>
-         <li>
-            <a href="#">
-               <img src="assets/redes_sociais/whatsapp.svg" alt="WhatsApp">
-            </a>
-         </li>
-         <li>
-            <a href="#">
-               <img src="assets/redes_sociais/facebook.svg" alt="Facebook">
-            </a>
-         </li>
-      </ul>
       <nav>
-         <ul class="menu">
-            <li>
-               <a href="pages/contact/contact.html">Contact</a>
-            </li>
-            <li>
-               <a href="pages/quem_somos/quem-somos.html">About Us</a>
-            </li>
-            <li>
-               <a href="pages/signIn/sign-in.html">Sign in</a>
-            </li>
-            <li>
-               <a href="pages/registration/registration.html">Create Account</a>
-            </li>
-         </ul>
+         <section class="wrapper">
+            <ul class="social-networks">
+               <li>
+                  <a href="#">
+                     <img src="assets/redes_sociais/youtube.svg" alt="Youtube">
+                  </a>
+               </li>
+               <li>
+                  <a href="#">
+                     <img src="assets/redes_sociais/instagram.svg" alt="Instagram">
+                  </a>
+               </li>
+               <li>
+                  <a href="#">
+                     <img src="assets/redes_sociais/whatsapp.svg" alt="WhatsApp">
+                  </a>
+               </li>
+               <li>
+                  <a href="#">
+                     <img src="assets/redes_sociais/facebook.svg" alt="Facebook">
+                  </a>
+               </li>
+            </ul>
+            <ul class="menu">
+               <li>
+                  <a href="pages/contact/contact.html">Contact</a>
+               </li>
+               <li>
+                  <a href="pages/quem_somos/quem-somos.html">About Us</a>
+               </li>
+               <li>
+                  <a href="pages/signIn/sign-in.html">Sign in</a>
+               </li>
+               <li>
+                  <a href="pages/registration/registration.html">Create Account</a>
+               </li>
+            </ul>
+         </section>
       </nav>
+      <div id="hamburguer"></div>
    </header>
    <main>
       <section id="introdution">
@@ -159,8 +164,7 @@
                <p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
                <p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
             </article>
-            <div class="video">
-            </div>
+            <iframe class="video" width="560" src="https://www.youtube.com/embed/XglN2D2nZUE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          </div>
       </section>
    </main>
@@ -170,5 +174,7 @@
          sed, corporis tempora iure iusto et hic, eum facere eveniet. Dolorum doloremque sit consequuntur ducimus!
       </p>
    </footer>
+
+   <script src="js/navbar.js"></script>
 </body>
 </html>
